# xmsstamper

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  _doxygen_mainpage_8md_source.html  _stamper___tutorial_8md_source.html  _tut_stamping_8cpp.html  _tut_stamping_8cpp_source.html  _tut_stamping_8t_8h.html  _tut_stamping_8t_8h_source.html  _xm_bathymetry_intersector_8cpp.html  _xm_bathymetry_intersector_8cpp.js  _xm_bathymetry_intersector_8cpp_source.html  _xm_bathymetry_intersector_8h.html  _xm_bathymetry_intersector_8h_source.html  _xm_bathymetry_intersector_8t_8h.html  _xm_bathymetry_intersector_8t_8h.js  _xm_bathymetry_intersector_8t_8h_source.html  _xm_breaklines_8cpp.html  _xm_breaklines_8cpp.js  _xm_breaklines_8cpp_source.html  _xm_breaklines_8h.html  _xm_breaklines_8h_source.html  _xm_guide_bank_util_8cpp.html  _xm_guide_bank_util_8cpp_source.html  _xm_guide_bank_util_8h.html  _xm_guide_bank_util_8h_source.html  _xm_sloped_abutment_util_8cpp.html  _xm_sloped_abutment_util_8cpp_source.html  _xm_sloped_abutment_util_8h.html  _xm_sloped_abutment_util_8h_source.html  _xm_stamp_end_cap_8cpp.html  _xm_stamp_end_cap_8cpp_source.html  _xm_stamp_end_cap_8h.html  _xm_stamp_end_cap_8h_source.html  _xm_stamp_interp_cross_section_8cpp.html  _xm_stamp_interp_cross_section_8cpp_source.html  _xm_stamp_interp_cross_section_8h.html  _xm_stamp_interp_cross_section_8h_source.html  (+172 more)
.github/workflows/: Linux-CI.yaml  Mac-CI.yaml  Windows-CI.yaml  XmsStamper-CI.yaml
Doxygen/: Doxyfile  DoxygenMainpage.md  Stamper_Tutorial.md
_package/: __init__.py  setup.py
_package/tests/test_files/: testCutEmbankment_base.asc  testFillEmbankment_base.asc  testGuidebank_base.asc  testIntersectBathymetry_base.asc  testSlopedAbutment_base.asc  testWingWall_base.asc
_package/tests/unit_tests/: stamper_io_pyt.py  stamper_pyt.py  xmsstamper_pyt.py
_package/xms/stamper/: __init__.py  stamper.py  stamper_io.py
build_py/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  xmsstamper.sln  xmsstamper.vcxproj  xmsstamper.vcxproj.filters  xmsstamper_py.vcxproj  xmsstamper_py.vcxproj.filters
build_py/lib/: xmsstamper_py.exp
build_py/xmsstamper_py.dir/Release/: xmsstamper_py.vcxprojResolveAssemblyReference.cache
dev/: Setup_py.bat  setenv.bat  xmsprofile_debug  xmsprofile_py
examples/: StamperRealData.html  StamperTutorial.html  ugrid_tools.py
output_files/: raster_stamp_fill_embankment_out.asc  test_sloped_abutment_out.asc
pydocs/: .buildinfo  genindex.html  gettingstarted.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pydocs/.doctrees/: environment.pickle  index.doctree  modules.doctree
pydocs/_sources/: index.rst.txt  modules.rst.txt
pydocs/modules/stamper/: Guidebank.html  SlopedAbutment.html  StampCrossSection.html  StampRaster.html  Stamper.html  StamperCenterlineProfile.html  StamperEndCap.html  StamperIo.html  WingWall.html  XmGuidebank.html  XmSlopedAbutment.html  XmStampCrossSection.html  XmStampRaster.html  XmStamper.html  XmStamperCenterlineProfile.html  XmStamperEndCap.html  XmStamperIo.html  XmWingWall.html  stamper.html
pydocs/source/: conf.py  getting_started.rst  index.rst  modules.rst
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_6.js  classes_8.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_4.js  enums_5.js  enums_6.js  files_12.js  files_a.js  files_f.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  (+28 more)
test_files/stamping/: renameOutFilesToBaselines.bat
test_files/stamping/rasterTestFiles/: dpipe_base.asc  testCutEmbankmentTin_out.tin  testCutEmbankment_base.asc  testFillEmbankmentTin_out.tin  testFillEmbankment_base.asc  testGuidebankTin_out.tin  testGuidebank_base.asc  testIntersectBathymetryTin_out.tin  testIntersectBathymetry_base.asc  testRealDataStamping_base.asc  testSlopedAbutmentTin_out.tin  testSlopedAbutment_base.asc  testWingWallTin_out.tin  testWingWall_base.asc
test_files/stamping/test_Bug12277/: xmsng_StamperIo.txt
test_files/stamping/test_Bug12337/: xmsng_StamperIo.txt
test_files/stamping/test_Bug13552/: xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_GuideBank01/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt  xmsng_out.txt
test_files/stamping/test_GuideBank02/: StamperIo_out.txt  tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_GuideBank03/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_GuideBank04/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt  xmsng_out.txt
test_files/stamping/test_GuideBank05/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt  xmsng_out.txt
test_files/stamping/test_GuideBank06/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt  xmsng_out.txt
test_files/stamping/test_GuideBank07/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_GuideBank08_cut/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_SlopedAbutment01/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt
test_files/stamping/test_SlopedAbutment02/: StamperIo_out.txt  tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt  xmsng_base64.txt  xmsng_out.txt
test_files/stamping/test_SlopedAbutment03/: tin_out.tin  xmsng_StamperIo.txt  xmsng_base.txt
test_files/stamping/test_WingWall01/: tin_out.tin  (+3 more)
xmsstamper/python/: xmsstamper_py.cpp  xmsstamper_pyt.py
xmsstamper/stamper/: TutStamping.cpp  TutStamping.t.h  XmStamper.cpp  XmStamper.h  XmStamper.t.h  XmStamperIo.cpp  XmStamperIo.h  XmStampere.cpp
(+158 files in other folders)
